Fix Flexbox of Tweets on mobile

--- a/about/about.css
+++ b/about/about.css
@@ -28,15 +28,15 @@
     padding: 10px;
 }
 
-.twitter-tweet {
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    width: 20%;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    margin: 10px;
-    padding: 10px;
-    background-color: #1C74A4;
-    flex: 1;
-    border-radius: 10px;
+.twitter-tweet, .tweets iframe {
+    -webkit-box-flex: 1 !important;
+    -moz-box-flex: 1 !important;
+    width: 20% !important;
+    -webkit-flex: 1 !important;
+    -ms-flex: 1 !important;
+    margin: 10px !important;
+    padding: 10px !important;
+    background-color: #1C74A4 !important;
+    flex: 1 !important;
+    border-radius: 10px !important;
 }
